// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/alert/demo/action.md correctly 1`] = `
Array [
  <div
    class="ant-alert ant-alert-success"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="success-filled"
      class="anticon anticon-success-filled ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="success-filled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm3.15 4.93L7.1 9.98 4.85 7.73a.5.5 0 10-.7.71l2.6 2.6c.19.2.5.2.7 0l4.4-4.4a.5.5 0 00-.7-.71z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Success Tips
      </div>
    </div>
    <div
      class="ant-alert-action"
    >
      <button
        class="ant-btn ant-btn-text ant-btn-sm"
        type="button"
      >
        <span>
          UNDO
        </span>
      </button>
    </div>
    <button
      class="ant-alert-close-icon"
      tabindex="0"
      type="button"
    >
      <span
        aria-label="close"
        class="anticon anticon-close"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M13.65 2.15a.5.5 0 11.7.7L9.21 8l5.46 5.46a.5.5 0 11-.71.7L8.5 8.72l-5.46 5.46a.5.5 0 01-.7-.71L7.78 8 2.65 2.85a.5.5 0 11.7-.7L8.5 7.29l5.15-5.14z"
          />
        </svg>
      </span>
    </button>
  </div>,
  <div
    class="ant-alert ant-alert-error ant-alert-with-description"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="close-fullfiled"
      class="anticon anticon-close-fullfiled ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-fullfiled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 6.3L5.88 5.16a.5.5 0 00-.77.64l.06.07L7.3 8l-2.12 2.12a.5.5 0 00.64.77l.07-.06L8 8.7l2.12 2.12a.5.5 0 00.77-.64l-.06-.07L8.7 8l2.12-2.12a.5.5 0 00-.64-.77l-.07.06L8 7.3 5.88 5.17 8 7.3z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Error Text
      </div>
      <div
        class="ant-alert-description"
      >
        Error Description Error Description Error Description Error Description
      </div>
    </div>
    <div
      class="ant-alert-action"
    >
      <button
        class="ant-btn ant-btn-sm ant-btn-dangerous"
        type="button"
      >
        <span>
          Detail
        </span>
      </button>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-warning ant-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Warning Text
      </div>
    </div>
    <div
      class="ant-alert-action"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn ant-btn-ghost ant-btn-sm"
            type="button"
          >
            <span>
              Done
            </span>
          </button>
        </div>
      </div>
    </div>
    <button
      class="ant-alert-close-icon"
      tabindex="0"
      type="button"
    >
      <span
        aria-label="close"
        class="anticon anticon-close"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M13.65 2.15a.5.5 0 11.7.7L9.21 8l5.46 5.46a.5.5 0 11-.71.7L8.5 8.72l-5.46 5.46a.5.5 0 01-.7-.71L7.78 8 2.65 2.85a.5.5 0 11.7-.7L8.5 7.29l5.15-5.14z"
          />
        </svg>
      </span>
    </button>
  </div>,
  <div
    class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Info Text
      </div>
      <div
        class="ant-alert-description"
      >
        Info Description Info Description Info Description Info Description
      </div>
    </div>
    <div
      class="ant-alert-action"
    >
      <div
        class="ant-space ant-space-vertical"
      >
        <div
          class="ant-space-item"
          style="margin-bottom:16px"
        >
          <button
            class="ant-btn ant-btn-primary ant-btn-sm"
            type="button"
          >
            <span>
              Accept
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn ant-btn-ghost ant-btn-sm ant-btn-dangerous"
            type="button"
          >
            <span>
              Decline
            </span>
          </button>
        </div>
      </div>
    </div>
    <button
      class="ant-alert-close-icon"
      tabindex="0"
      type="button"
    >
      <span
        aria-label="close"
        class="anticon anticon-close"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M13.65 2.15a.5.5 0 11.7.7L9.21 8l5.46 5.46a.5.5 0 11-.71.7L8.5 8.72l-5.46 5.46a.5.5 0 01-.7-.71L7.78 8 2.65 2.85a.5.5 0 11.7-.7L8.5 7.29l5.15-5.14z"
          />
        </svg>
      </span>
    </button>
  </div>,
]
`;

exports[`renders ./components/alert/demo/banner.md correctly 1`] = `
Array [
  <div
    class="ant-alert ant-alert-warning ant-alert-banner"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="information-filled"
      class="anticon anticon-information-filled ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="information-filled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm.3 9.56c-.16.18-.3.27-.39.27-.04 0-.07 0-.11-.02-.05-.02-.05-.07-.05-.14 0-.06.02-.25.1-.5l.13-.53.83-3-.46.09-.8.11-.88.1v.27c.23 0 .4.02.48.07.1.05.14.11.14.25v.07l-.02.1-.64 2.38-.12.41c-.04.18-.07.32-.07.41 0 .26.07.44.23.55.16.12.32.19.53.19.34 0 .67-.14.96-.44.19-.18.44-.53.78-1.03l-.23-.16c-.11.18-.27.37-.4.55zm-.1-6.2a.71.71 0 00-.54.22.71.71 0 00-.22.53c0 .22.08.39.22.53.15.15.32.22.53.22.22 0 .4-.07.54-.22a.71.71 0 00.21-.53.71.71 0 00-.21-.53.71.71 0 00-.54-.22z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Warning text
      </div>
    </div>
  </div>,
  <br />,
  <div
    class="ant-alert ant-alert-warning ant-alert-banner"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="information-filled"
      class="anticon anticon-information-filled ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="information-filled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm.3 9.56c-.16.18-.3.27-.39.27-.04 0-.07 0-.11-.02-.05-.02-.05-.07-.05-.14 0-.06.02-.25.1-.5l.13-.53.83-3-.46.09-.8.11-.88.1v.27c.23 0 .4.02.48.07.1.05.14.11.14.25v.07l-.02.1-.64 2.38-.12.41c-.04.18-.07.32-.07.41 0 .26.07.44.23.55.16.12.32.19.53.19.34 0 .67-.14.96-.44.19-.18.44-.53.78-1.03l-.23-.16c-.11.18-.27.37-.4.55zm-.1-6.2a.71.71 0 00-.54.22.71.71 0 00-.22.53c0 .22.08.39.22.53.15.15.32.22.53.22.22 0 .4-.07.54-.22a.71.71 0 00.21-.53.71.71 0 00-.21-.53.71.71 0 00-.54-.22z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Very long warning text warning text text text text text text text
      </div>
    </div>
    <button
      class="ant-alert-close-icon"
      tabindex="0"
      type="button"
    >
      <span
        aria-label="close"
        class="anticon anticon-close"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M13.65 2.15a.5.5 0 11.7.7L9.21 8l5.46 5.46a.5.5 0 11-.71.7L8.5 8.72l-5.46 5.46a.5.5 0 01-.7-.71L7.78 8 2.65 2.85a.5.5 0 11.7-.7L8.5 7.29l5.15-5.14z"
          />
        </svg>
      </span>
    </button>
  </div>,
  <br />,
  <div
    class="ant-alert ant-alert-warning ant-alert-no-icon ant-alert-banner"
    data-show="true"
    role="alert"
  >
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Warning text without icon
      </div>
    </div>
  </div>,
  <br />,
  <div
    class="ant-alert ant-alert-error ant-alert-banner"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="close-fullfiled"
      class="anticon anticon-close-fullfiled ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-fullfiled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 6.3L5.88 5.16a.5.5 0 00-.77.64l.06.07L7.3 8l-2.12 2.12a.5.5 0 00.64.77l.07-.06L8 8.7l2.12 2.12a.5.5 0 00.77-.64l-.06-.07L8.7 8l2.12-2.12a.5.5 0 00-.64-.77l-.07.06L8 7.3 5.88 5.17 8 7.3z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Error text
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/alert/demo/basic.md correctly 1`] = `
<div
  class="ant-alert ant-alert-success ant-alert-no-icon"
  data-show="true"
  role="alert"
>
  <div
    class="ant-alert-content"
  >
    <div
      class="ant-alert-message"
    >
      Success Text
    </div>
  </div>
</div>
`;

exports[`renders ./components/alert/demo/closable.md correctly 1`] = `
Array [
  <div
    class="ant-alert ant-alert-warning ant-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Warning Text Warning Text Warning TextW arning Text Warning Text Warning TextWarning Text
      </div>
    </div>
    <button
      class="ant-alert-close-icon"
      tabindex="0"
      type="button"
    >
      <span
        aria-label="close"
        class="anticon anticon-close"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M13.65 2.15a.5.5 0 11.7.7L9.21 8l5.46 5.46a.5.5 0 11-.71.7L8.5 8.72l-5.46 5.46a.5.5 0 01-.7-.71L7.78 8 2.65 2.85a.5.5 0 11.7-.7L8.5 7.29l5.15-5.14z"
          />
        </svg>
      </span>
    </button>
  </div>,
  <div
    class="ant-alert ant-alert-error ant-alert-with-description ant-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Error Text
      </div>
      <div
        class="ant-alert-description"
      >
        Error Description Error Description Error Description Error Description Error Description Error Description
      </div>
    </div>
    <button
      class="ant-alert-close-icon"
      tabindex="0"
      type="button"
    >
      <span
        aria-label="close"
        class="anticon anticon-close"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M13.65 2.15a.5.5 0 11.7.7L9.21 8l5.46 5.46a.5.5 0 11-.71.7L8.5 8.72l-5.46 5.46a.5.5 0 01-.7-.71L7.78 8 2.65 2.85a.5.5 0 11.7-.7L8.5 7.29l5.15-5.14z"
          />
        </svg>
      </span>
    </button>
  </div>,
]
`;

exports[`renders ./components/alert/demo/close-text.md correctly 1`] = `
<div
  class="ant-alert ant-alert-info ant-alert-no-icon"
  data-show="true"
  role="alert"
>
  <div
    class="ant-alert-content"
  >
    <div
      class="ant-alert-message"
    >
      Info Text
    </div>
  </div>
  <button
    class="ant-alert-close-icon"
    tabindex="0"
    type="button"
  >
    <span
      class="ant-alert-close-text"
    >
      Close Now
    </span>
  </button>
</div>
`;

exports[`renders ./components/alert/demo/custom-icon.md correctly 1`] = `
Array [
  <div
    class="ant-alert ant-alert-success ant-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        showIcon = false
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-success"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Success Tips
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-info"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Informational Notes
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-warning"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Warning
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-error"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Error
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-success ant-alert-with-description"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Success Tips
      </div>
      <div
        class="ant-alert-description"
      >
        Detailed description and advices about successful copywriting.
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-info ant-alert-with-description"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Informational Notes
      </div>
      <div
        class="ant-alert-description"
      >
        Additional description and informations about copywriting.
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-warning ant-alert-with-description"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Warning
      </div>
      <div
        class="ant-alert-description"
      >
        This is a warning notice about copywriting.
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-error ant-alert-with-description"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="smile"
      class="anticon anticon-smile ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="smile"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M288 421a48 48 0 1096 0 48 48 0 10-96 0zm352 0a48 48 0 1096 0 48 48 0 10-96 0zM512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm263 711c-34.2 34.2-74 61-118.3 79.8C611 874.2 562.3 884 512 884c-50.3 0-99-9.8-144.8-29.2A370.4 370.4 0 01248.9 775c-34.2-34.2-61-74-79.8-118.3C149.8 611 140 562.3 140 512s9.8-99 29.2-144.8A370.4 370.4 0 01249 248.9c34.2-34.2 74-61 118.3-79.8C413 149.8 461.7 140 512 140c50.3 0 99 9.8 144.8 29.2A370.4 370.4 0 01775.1 249c34.2 34.2 61 74 79.8 118.3C874.2 413 884 461.7 884 512s-9.8 99-29.2 144.8A368.89 368.89 0 01775 775zM664 533h-48.1c-4.2 0-7.8 3.2-8.1 7.4C604 589.9 562.5 629 512 629s-92.1-39.1-95.8-88.6c-.3-4.2-3.9-7.4-8.1-7.4H360a8 8 0 00-8 8.4c4.4 84.3 74.5 151.6 160 151.6s155.6-67.3 160-151.6a8 8 0 00-8-8.4z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Error
      </div>
      <div
        class="ant-alert-description"
      >
        This is an error message about copywriting.
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/alert/demo/description.md correctly 1`] = `
Array [
  <div
    class="ant-alert ant-alert-success ant-alert-with-description ant-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Success Text
      </div>
      <div
        class="ant-alert-description"
      >
        Success Description Success Description Success Description
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-info ant-alert-with-description ant-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Info Text
      </div>
      <div
        class="ant-alert-description"
      >
        Info Description Info Description Info Description Info Description
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-warning ant-alert-with-description ant-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Warning Text
      </div>
      <div
        class="ant-alert-description"
      >
        Warning Description Warning Description Warning Description Warning Description
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-error ant-alert-with-description ant-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Error Text
      </div>
      <div
        class="ant-alert-description"
      >
        Error Description Error Description Error Description Error Description
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/alert/demo/error-boundary.md correctly 1`] = `
<button
  class="ant-btn ant-btn-dangerous"
  type="button"
>
  <span>
    Click me to throw a error
  </span>
</button>
`;

exports[`renders ./components/alert/demo/icon.md correctly 1`] = `
Array [
  <div
    class="ant-alert ant-alert-success"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="success-filled"
      class="anticon anticon-success-filled ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="success-filled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm3.15 4.93L7.1 9.98 4.85 7.73a.5.5 0 10-.7.71l2.6 2.6c.19.2.5.2.7 0l4.4-4.4a.5.5 0 00-.7-.71z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Success Tips
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-info"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="notice-circle-filled"
      class="anticon anticon-notice-circle-filled ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="notice-circle-filled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M14.58 5.28A6.98 6.98 0 008.13 1a6.96 6.96 0 00-6.45 4.28 6.96 6.96 0 001.5 7.67 6.99 6.99 0 0011.4-7.67zm-6.45 6.66a.88.88 0 110-1.75.88.88 0 010 1.75zm.88-7c0 .06 0 .11-.02.16l-.42 3.82a.44.44 0 01-.87 0L7.27 5.1a.8.8 0 01-.01-.15V4.9a.88.88 0 011.75 0v.03z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Informational Notes
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-warning"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="information-filled"
      class="anticon anticon-information-filled ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="information-filled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm.3 9.56c-.16.18-.3.27-.39.27-.04 0-.07 0-.11-.02-.05-.02-.05-.07-.05-.14 0-.06.02-.25.1-.5l.13-.53.83-3-.46.09-.8.11-.88.1v.27c.23 0 .4.02.48.07.1.05.14.11.14.25v.07l-.02.1-.64 2.38-.12.41c-.04.18-.07.32-.07.41 0 .26.07.44.23.55.16.12.32.19.53.19.34 0 .67-.14.96-.44.19-.18.44-.53.78-1.03l-.23-.16c-.11.18-.27.37-.4.55zm-.1-6.2a.71.71 0 00-.54.22.71.71 0 00-.22.53c0 .22.08.39.22.53.15.15.32.22.53.22.22 0 .4-.07.54-.22a.71.71 0 00.21-.53.71.71 0 00-.21-.53.71.71 0 00-.54-.22z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Warning
      </div>
    </div>
    <button
      class="ant-alert-close-icon"
      tabindex="0"
      type="button"
    >
      <span
        aria-label="close"
        class="anticon anticon-close"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M13.65 2.15a.5.5 0 11.7.7L9.21 8l5.46 5.46a.5.5 0 11-.71.7L8.5 8.72l-5.46 5.46a.5.5 0 01-.7-.71L7.78 8 2.65 2.85a.5.5 0 11.7-.7L8.5 7.29l5.15-5.14z"
          />
        </svg>
      </span>
    </button>
  </div>,
  <div
    class="ant-alert ant-alert-error"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="close-fullfiled"
      class="anticon anticon-close-fullfiled ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-fullfiled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 6.3L5.88 5.16a.5.5 0 00-.77.64l.06.07L7.3 8l-2.12 2.12a.5.5 0 00.64.77l.07-.06L8 8.7l2.12 2.12a.5.5 0 00.77-.64l-.06-.07L8.7 8l2.12-2.12a.5.5 0 00-.64-.77l-.07.06L8 7.3 5.88 5.17 8 7.3z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Error
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-success ant-alert-with-description"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="success-filled"
      class="anticon anticon-success-filled ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="success-filled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm3.15 4.93L7.1 9.98 4.85 7.73a.5.5 0 10-.7.71l2.6 2.6c.19.2.5.2.7 0l4.4-4.4a.5.5 0 00-.7-.71z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Success Tips
      </div>
      <div
        class="ant-alert-description"
      >
        Detailed description and advice about successful copywriting.
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-info ant-alert-with-description"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="notice-circle-filled"
      class="anticon anticon-notice-circle-filled ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="notice-circle-filled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M14.58 5.28A6.98 6.98 0 008.13 1a6.96 6.96 0 00-6.45 4.28 6.96 6.96 0 001.5 7.67 6.99 6.99 0 0011.4-7.67zm-6.45 6.66a.88.88 0 110-1.75.88.88 0 010 1.75zm.88-7c0 .06 0 .11-.02.16l-.42 3.82a.44.44 0 01-.87 0L7.27 5.1a.8.8 0 01-.01-.15V4.9a.88.88 0 011.75 0v.03z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Informational Notes
      </div>
      <div
        class="ant-alert-description"
      >
        Additional description and information about copywriting.
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-warning ant-alert-with-description"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="information-filled"
      class="anticon anticon-information-filled ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="information-filled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm.3 9.56c-.16.18-.3.27-.39.27-.04 0-.07 0-.11-.02-.05-.02-.05-.07-.05-.14 0-.06.02-.25.1-.5l.13-.53.83-3-.46.09-.8.11-.88.1v.27c.23 0 .4.02.48.07.1.05.14.11.14.25v.07l-.02.1-.64 2.38-.12.41c-.04.18-.07.32-.07.41 0 .26.07.44.23.55.16.12.32.19.53.19.34 0 .67-.14.96-.44.19-.18.44-.53.78-1.03l-.23-.16c-.11.18-.27.37-.4.55zm-.1-6.2a.71.71 0 00-.54.22.71.71 0 00-.22.53c0 .22.08.39.22.53.15.15.32.22.53.22.22 0 .4-.07.54-.22a.71.71 0 00.21-.53.71.71 0 00-.21-.53.71.71 0 00-.54-.22z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Warning
      </div>
      <div
        class="ant-alert-description"
      >
        This is a warning notice about copywriting.
      </div>
    </div>
    <button
      class="ant-alert-close-icon"
      tabindex="0"
      type="button"
    >
      <span
        aria-label="close"
        class="anticon anticon-close"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M13.65 2.15a.5.5 0 11.7.7L9.21 8l5.46 5.46a.5.5 0 11-.71.7L8.5 8.72l-5.46 5.46a.5.5 0 01-.7-.71L7.78 8 2.65 2.85a.5.5 0 11.7-.7L8.5 7.29l5.15-5.14z"
          />
        </svg>
      </span>
    </button>
  </div>,
  <div
    class="ant-alert ant-alert-error ant-alert-with-description"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="close-fullfiled"
      class="anticon anticon-close-fullfiled ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-fullfiled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 6.3L5.88 5.16a.5.5 0 00-.77.64l.06.07L7.3 8l-2.12 2.12a.5.5 0 00.64.77l.07-.06L8 8.7l2.12 2.12a.5.5 0 00.77-.64l-.06-.07L8.7 8l2.12-2.12a.5.5 0 00-.64-.77l-.07.06L8 7.3 5.88 5.17 8 7.3z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Error
      </div>
      <div
        class="ant-alert-description"
      >
        This is an error message about copywriting.
      </div>
    </div>
  </div>,
]
`;

exports[`renders ./components/alert/demo/loop-banner.md correctly 1`] = `
Array [
  <div
    class="ant-alert ant-alert-warning ant-alert-banner"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="information-filled"
      class="anticon anticon-information-filled ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="information-filled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm.3 9.56c-.16.18-.3.27-.39.27-.04 0-.07 0-.11-.02-.05-.02-.05-.07-.05-.14 0-.06.02-.25.1-.5l.13-.53.83-3-.46.09-.8.11-.88.1v.27c.23 0 .4.02.48.07.1.05.14.11.14.25v.07l-.02.1-.64 2.38-.12.41c-.04.18-.07.32-.07.41 0 .26.07.44.23.55.16.12.32.19.53.19.34 0 .67-.14.96-.44.19-.18.44-.53.78-1.03l-.23-.16c-.11.18-.27.37-.4.55zm-.1-6.2a.71.71 0 00-.54.22.71.71 0 00-.22.53c0 .22.08.39.22.53.15.15.32.22.53.22.22 0 .4-.07.54-.22a.71.71 0 00.21-.53.71.71 0 00-.21-.53.71.71 0 00-.54-.22z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        <div
          class="x0 x1 x2 x3 "
        >
          <div
            style="transition:width 150ms linear;height:auto;width:auto"
          >
            <div
              class="x1 x4 x5 x6"
              style="opacity:1;transform:translateY(0px);position:relative"
            >
              <div>
                Notice message one
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-warning ant-alert-banner"
    data-show="true"
    role="alert"
  >
    <span
      aria-label="information-filled"
      class="anticon anticon-information-filled ant-alert-icon"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="information-filled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm.3 9.56c-.16.18-.3.27-.39.27-.04 0-.07 0-.11-.02-.05-.02-.05-.07-.05-.14 0-.06.02-.25.1-.5l.13-.53.83-3-.46.09-.8.11-.88.1v.27c.23 0 .4.02.48.07.1.05.14.11.14.25v.07l-.02.1-.64 2.38-.12.41c-.04.18-.07.32-.07.41 0 .26.07.44.23.55.16.12.32.19.53.19.34 0 .67-.14.96-.44.19-.18.44-.53.78-1.03l-.23-.16c-.11.18-.27.37-.4.55zm-.1-6.2a.71.71 0 00-.54.22.71.71 0 00-.22.53c0 .22.08.39.22.53.15.15.32.22.53.22.22 0 .4-.07.54-.22a.71.71 0 00.21-.53.71.71 0 00-.21-.53.71.71 0 00-.54-.22z"
        />
      </svg>
    </span>
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      />
    </div>
  </div>,
]
`;

exports[`renders ./components/alert/demo/smooth-closed.md correctly 1`] = `
<div>
  <div
    class="ant-alert ant-alert-success ant-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Alert Message Text
      </div>
    </div>
    <button
      class="ant-alert-close-icon"
      tabindex="0"
      type="button"
    >
      <span
        aria-label="close"
        class="anticon anticon-close"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M13.65 2.15a.5.5 0 11.7.7L9.21 8l5.46 5.46a.5.5 0 11-.71.7L8.5 8.72l-5.46 5.46a.5.5 0 01-.7-.71L7.78 8 2.65 2.85a.5.5 0 11.7-.7L8.5 7.29l5.15-5.14z"
          />
        </svg>
      </span>
    </button>
  </div>
  <p>
    placeholder text here
  </p>
</div>
`;

exports[`renders ./components/alert/demo/style.md correctly 1`] = `
Array [
  <div
    class="ant-alert ant-alert-success ant-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Success Text
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-info ant-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Info Text
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-warning ant-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Warning Text
      </div>
    </div>
  </div>,
  <div
    class="ant-alert ant-alert-error ant-alert-no-icon"
    data-show="true"
    role="alert"
  >
    <div
      class="ant-alert-content"
    >
      <div
        class="ant-alert-message"
      >
        Error Text
      </div>
    </div>
  </div>,
]
`;
